frontend/tests/cases/negative/unknownTyCon.gr
-- One is unknown
dub : Int |âˆ : One| -> Int
dub |x| = x + x
